turbosql/tests/ui/macros.stderr
error: Field e has no default value and is not nullable. Either add a default value with e.g. #[turbosql(sql_default = 0)] or make it Option<u8>.
 --> tests/ui/macros.rs:8:2
  |
8 |     e: u8,
  |     ^^^^^

error: derive(Turbosql) structs must include a 'rowid: Option<i64>' field
  --> tests/ui/macros.rs:11:10
   |
11 | #[derive(Turbosql, Default)]
   |          ^^^^^^^^
   |
   = note: this error originates in the derive macro `Turbosql` (in Nightly builds, run with -Z macro-backtrace for more info)

error: SQLite cannot natively store unsigned 64-bit integers, so Turbosql does not support u64 fields. Use i64, u32, f64, or a string or binary format instead. (see https://github.com/trevyn/turbosql/issues/3 )
  --> tests/ui/macros.rs:19:5
   |
19 |     e: Option<u64>,
   |        ^^^^^^^^^^^

error: expected an expression
  --> tests/ui/macros.rs:30:50
   |
30 |     select!(Person "WHERE age = " 24 " AND name = ?", "Bob").unwrap();
   |                                                     ^

error: SQLite named parameters not currently supported.
  --> tests/ui/macros.rs:31:2
   |
31 |     select!(Person "WHERE age = " 24 " AND name = $name").unwrap();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `select` (in Nightly builds, run with -Z macro-backtrace for more info)

error: Expected 1 bound parameter, got 2: "SELECT rowid, name, age FROM person WHERE age = ?"
  --> tests/ui/macros.rs:32:17
   |
32 |     select!(Person "WHERE age = ?", 1, 2).unwrap();
   |                    ^^^^^^^^^^^^^^^^^^^^^

error: Error validating SQL statement: "incomplete input". SQL: "SELECT rowid, name, age FROM person WHERE age = "
  --> tests/ui/macros.rs:33:2
   |
33 |     select!(Person "WHERE age = ").unwrap();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `select` (in Nightly builds, run with -Z macro-backtrace for more info)

error: No rows returned from SQL, use execute! instead.
  --> tests/ui/macros.rs:34:2
   |
34 |     select!("UPDATE person SET age = 1").unwrap();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `select` (in Nightly builds, run with -Z macro-backtrace for more info)

error: Rows returned from SQL, use select! instead.
  --> tests/ui/macros.rs:35:2
   |
35 |     execute!("SELECT 1").unwrap();
   |     ^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `execute` (in Nightly builds, run with -Z macro-backtrace for more info)

error: Error validating SQL statement: "no such column: nonexistentcolumn in SELECT rowid, name, age FROM person WHERE nonexistentcolumn = 1 at offset 42". SQL: "SELECT rowid, name, age FROM person WHERE nonexistentcolumn = 1"
  --> tests/ui/macros.rs:36:2
   |
36 |     select!(Person "WHERE nonexistentcolumn = 1").unwrap();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `select` (in Nightly builds, run with -Z macro-backtrace for more info)

error: Table "nonexistenttable" not found. Does struct Nonexistenttable exist and have #[derive(Turbosql, Default)]?
  --> tests/ui/macros.rs:37:10
   |
37 |     select!(Nonexistenttable).unwrap();
   |             ^^^^^^^^^^^^^^^^

error: expected `<`
  --> tests/ui/macros.rs:38:2
   |
38 |     select!(Vec).unwrap();
   |     ^^^^^^^^^^^^
   |
   = note: this error originates in the macro `select` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected identifier
  --> tests/ui/macros.rs:39:14
   |
39 |     select!(Vec<"what">).unwrap();
   |                 ^^^^^^
